trying to solve ui problem on mobile blindly

--- a/src/background/Background.css
+++ b/src/background/Background.css
@@ -47,7 +47,7 @@ span {
     width: 100%;
     background-color: rgb(0,0,0,0.5);
     padding-bottom: 15px;
-    margin-top: 34em;
+    margin-top: 20em;
   }
 
   span {
